manifests/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jb-basic-app-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ${DOMAIN_NAME}
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: jb-basic-app-service
                port:
                  number: 80
            path: /
  tls:
    - hosts:
      - ${DOMAIN_NAME}
      secretName: letsencrypt-myapp
